# ASC-EDO

./: CMakeLists.txt  poly.ipynb  poly.txt
demos/: demo_autodiff.cpp  plotad.py  plotmassspring.py  plotmassspringelectric.py  polynomials.cpp  test_ode.cpp  test_ode_Electric.cpp  test_ode_ad  test_ode_ad.cpp
mechsystem/: test_mass_spring.py
src/: CMakeLists.txt  autodiff.hpp  bem.ipynb  explicitRK.hpp  implicitRK.hpp  nonlinfunc.hpp  timestepper.hpp
